kubernetes/base/middleware-redirect-www.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-www
spec:
  redirectRegex:
    regex: ^https?://atida\.com(.*)
    replacement: https://www.atida.com$1
    permanent: true
